# Kubernify

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  kubernify_report.json  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/kubernify/: __init__.py  cli.py  image_parser.py  kubernetes_controller.py  models.py  stability_audit.py  workload_discovery.py
tests/: conftest.py  test_cli.py  test_image_parser.py  test_kubernetes_controller.py  test_models.py  test_stability_audit.py  test_version_verification.py  test_workload_discovery.py
